cmake_minimum_required(VERSION 2.8)
find_package(PythonLibs 2.7 REQUIRED )
find_package(PythonInterp 2.7 REQUIRED )

FIND_PACKAGE(Boost COMPONENTS python REQUIRED)

FIND_PACKAGE(PythonLibs REQUIRED)

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})

FILE(GLOB MDSTRESSPY_SOURCES_H   *.h)
FILE(GLOB MDSTRESSPY_SOURCES_CPP *.cpp)
SET(MDSTRESSPY_SOURCES ${MDSTRESSPY_SOURCES_CPP} ${MDSTRESSPY_SOURCES_H})

ADD_LIBRARY(mdstresspy SHARED ${MDSTRESSPY_SOURCES})

TARGET_LINK_LIBRARIES(mdstresspy  mdstress  ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} )

INSTALL(TARGETS mdstresspy RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib/static)

INSTALL (FILES ${MDSTRESSPY_SOURCES_CPP} DESTINATION include/mdstress)
